<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".account.login.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/account_vertical_padding"
        android:paddingHorizontal="@dimen/account_horizontal_padding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txil_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            android:hint="@string/hint_username"
            app:counterMaxLength="@integer/length_username"
            app:counterEnabled="true">
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txil_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            app:passwordToggleEnabled="true"
            android:hint="@string/hint_password"
            app:counterMaxLength="@integer/length_password"
            app:counterEnabled="true">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textSize="@dimen/btn_font_L"
            android:textColor="@color/white"></Button>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tx_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/btn_font_M"
                android:textColor="@color/colorAccent"
                android:layout_alignParentLeft="true"></TextView>

            <TextView
                android:id="@+id/tx_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textSize="@dimen/btn_font_M"
                android:textColor="@color/gray"
                android:layout_alignParentRight="true"></TextView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
