<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".account.register.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/account_vertical_padding"
        android:paddingHorizontal="@dimen/account_horizontal_padding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txil_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            android:hint="@string/hint_username"
            app:counterMaxLength="@integer/length_username"
            app:counterEnabled="true">
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txil_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            app:passwordToggleEnabled="true"
            android:hint="@string/hint_password"
            app:counterMaxLength="@integer/length_password"
            app:counterEnabled="true">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginVertical="@dimen/account_vertical_margin">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txil_verifyCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/account_horizontal_padding"
                android:hint="@string/hint_verifyCode"
                app:counterMaxLength="@integer/length_verifyCode"
                app:counterEnabled="true">
                <EditText
                    android:id="@+id/edt_verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_getVerifyCode"
                android:layout_width="@dimen/btn_verifyCode_length"
                android:layout_height="wrap_content"
                android:text="@string/get_verifyCode"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_font_M"
                android:background="@color/colorAccent"
                android:paddingHorizontal="@dimen/btn_horizontal_padding"></Button>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/account_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textSize="@dimen/btn_font_L"
            android:textColor="@color/white"></Button>
    </LinearLayout>
</ScrollView>

